feat: Update controllers. Delete v1
